style.css
/* ... */
.education__form {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: var(--grid-gap);
    align-items: center;
}

.education__form--left h2 {
    color: white;
    font-size: 36px;
    font-weight: 500;
    margin: 0 0 1rem 0;
    line-height: 46px;
}

.education__form--left p {
    color: white;
    line-height: 24px;
    max-width: 390px;
    margin: 0;
}

.education__form > .education__form--right > .contacts-form-wrapper > h2 {
    font-size: 30px;
    font-weight: 500;
}

.form-price {
    font-size: 22px;
    font-weight: 600;
    color: var(--accent-color);
    margin: 0.5rem 0 1.5rem 0;
    line-height: 1.3;
}

.form-price span {
    font-size: 15px;
    font-weight: 400;
    color: #888;
}

.education__form > .education__form--right > .contacts-form_prof > h2 {
    font-size: 30px;
    font-weight: 500;
}

/*основы*/
.education__basics {
    padding-top: 3rem;
    padding-bottom: 3rem;
}

.education__basics h2 {
    padding-bottom: 2rem;
}

.education__basics > .items {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 6rem var(--grid-gap);
}

.education__basics > .items h3 {
    font-weight: 500;
    font-size: 30px;
    color: var(--accent-color);
    margin: 1rem 0;
}

.education__basics > .items p {
    line-height: 24px;
}

.education__basics > .items > .left {
    margin: auto;
}

/*стоимость*/
.education__price--background {
    background-color: rgba(93, 113, 221, 0.03);
}

.education__price {
    padding-top: 3rem;
    padding-bottom: 7rem;
}

.education__price h2 {
    padding-bottom: 3rem;
}

.education__price > .items {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 8rem var(--grid-gap);
}

.education__price > .items > .item, .item--blue {
    background: #FFFFFF;
    box-shadow: 4px 8px 40px rgba(8, 24, 111, 0.2);
    border-radius: 20px;
    padding: 40px;
}

.education__price > .items > .item > p {
    font-size: 16px;
}

.education__price > .items > .item > .cost > span {
    font-size: 36px;
    font-weight: 500;
    margin-right: 1rem;
}

.education__price > .items > .item > h3 {
    font-weight: 500;
    font-size: 28px;
    color: #0c68f5;
}

.education__price > .items > .item > ul {
    margin: 0;
    padding: 0;
    list-style-type: none; /* Убираем маркеры */
}

.education__price > .items > .item > ul > li {
    display: grid;
    grid-template-columns: 1fr 5fr;
    margin-top: 1.5rem;
}

.education__price > .items > .item > ul > li > img {
    margin: 2px auto;
}

.education__price > .items > .item > ul > li > p {
    margin: 0;
    font-size: 16px;
}

.education__price > .items > .item > form {
    margin-top: 2rem;
}

.education__price > .items > .item--blue {
    background-color: var(--accent-color);
}

.education__price > .items > .item--blue {
    font-size: 16px;
    color: white;
}

.education__price > .items > .item--blue p{
    font-size: 16px;
    color: white;
}

.education__price > .items > .item--blue > .cost > span {
    font-size: 36px;
    font-weight: 500;
    margin-right: 1rem;
    color: white;
}

.education__price > .items > .item--blue > h3 {
    font-weight: 500;
    font-size: 28px;
    color: white;
}

.education__price > .items > .item--blue > ul {
    margin: 0;
    padding: 0;
    list-style-type: none; /* Убираем маркеры */
}

.education__price > .items > .item--blue > ul > li {
    display: grid;
    grid-template-columns: 1fr 5fr;
    margin-top: 1.5rem;
}

.education__price > .items > .item--blue > ul > li > img {
    margin: 2px auto;
}

.education__price > .items > .item--blue > ul > li > p {
    margin: 0;
    font-size: 16px;
}

.education__price > .items > .item--blue > form {
    margin-top: 2rem;
}

.contacts-form-wrapper__padding {
    margin-top: 0;
    margin-bottom: 0;
}

.reg-form__btn--blue {
    margin-top: 2rem;
    width: 100%;
	border-radius: 20px;
	height: 50px;
	background-color: white;
	font-family: 'Futura PT',
		sans-serif;
	font-weight: 400;
	font-size: 18px;
	line-height: 23px;
	color: var(--accent-color);
	display: flex;
	align-items: center;
	justify-content: center;
}

.education__about--form {
    max-width: 350px;
    padding-top: 1rem;
}

/* media.css*/
@media (max-width: 1366px) {
	.blog-post__category {
		font-size: 14px;
	}

	.sub-form {
		padding: 0 15px;
	}
	
	.education__about {
		padding-bottom: 3%;
	}
}

@media (max-width: 1200px) {
	.menu-item:not(:last-child) {
		margin-right: 20px;
	}
	.menu-item a {
		font-size: 16px;
	}
}
/* ... */

